# auto-patch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  LICENSE  PRD.md  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
demo/: sample_issue.md  walkthrough.md
demo/sample_target/: pyproject.toml
demo/sample_target/sample_target/: __init__.py  mathutil.py
demo/sample_target/tests/: test_mathutil.py
demo/screenshots/: day1_terminal_output.txt  day2_terminal_output.txt  day2_trace.html  day3_terminal_output.txt  render_day1_shot.py  render_day2_shot.py  render_day3_shot.py  run-day2-demo.jsonl
eval/: __init__.py  fixtures.py  run_eval.py  scoring.py
eval/issues/: gh_attrs_1327.json  gh_attrs_1348.json  gh_click_3458.json  gh_click_3487.json  gh_click_3501.json  gh_flask_3226.json  gh_flask_4333.json  gh_jinja_1400.json  gh_jinja_1637.json  gh_kubeflow_mcp_32.json  gh_prowler_11794.json  gh_prowler_11923.json  gh_pydantic_13318.json  gh_pydantic_13356.json  gh_requests_5921.json  gh_rich_2457.json  gh_rich_3021.json  gh_toqito_1801.json  local_clamp.json  local_demo_sample.json  local_is_even.json  local_percent.json  local_reverse_words.json
eval/issues/expected/: local_clamp.diff  local_is_even.diff  local_percent.diff  local_reverse_words.diff
eval/targets/clamp_bug/: pyproject.toml
eval/targets/clamp_bug/clamp_bug/: __init__.py  mathutil.py
eval/targets/clamp_bug/tests/: test_mathutil.py
eval/targets/even_bug/: pyproject.toml
eval/targets/even_bug/even_bug/: __init__.py  numbers.py
eval/targets/even_bug/tests/: test_numbers.py
eval/targets/percent_bug/: pyproject.toml
eval/targets/percent_bug/percent_bug/: __init__.py  stats.py
eval/targets/percent_bug/tests/: test_stats.py
eval/targets/reverse_bug/: pyproject.toml
eval/targets/reverse_bug/reverse_bug/: __init__.py  textutil.py
eval/targets/reverse_bug/tests/: test_textutil.py
src/autopatch/: __init__.py  cli.py  config.py
src/autopatch/agent/: __init__.py  guardrails.py  loop.py  patcher.py  planner.py  test_generator.py  verifier.py
src/autopatch/llm/: __init__.py  provider.py
src/autopatch/mcp_tools/: __init__.py  codebase_tool.py  filesystem_tool.py  github_tool.py  sandbox_tool.py
src/autopatch/retrieval/: __init__.py  symbol_index.py
src/autopatch/sandbox/: __init__.py  docker_runner.py
src/autopatch/tracing/: __init__.py  logger.py  viewer.py
tests/: test_config.py  test_eval_harness.py  test_filesystem_tool.py  test_github_parse.py  test_guardrails.py  test_patcher_utils.py  test_pr_body.py  test_symbol_index.py  test_tracing.py  test_viewer.py
