[project]
name = "autopatch"
version = "0.1.0"
description = "Autonomous coding agent that resolves GitHub issues and opens human-reviewed draft PRs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AutoPatch Contributors" }]
keywords = ["agent", "llm", "github", "mcp", "coding-agent"]
dependencies = [
    "anthropic>=0.49.0",
    "docker>=7.1.0",
    "httpx>=0.28.0",
    "mcp>=1.6.0,<2",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "PyGithub>=2.5.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "types-requests>=2.32.0",
]

[project.scripts]
autopatch = "autopatch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autopatch"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "eval"]
extend-exclude = [
    ".agents",
    ".autopatch",
    "demo/screenshots",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
]
ignore = [
    "E501",
    "B008",  # Typer/Click argument defaults are intentional
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"
packages = ["autopatch"]

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "tree_sitter_python.*",
    "github.*",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
