[project]
name = "sample-target"
version = "0.1.0"
description = "Tiny buggy package used as AutoPatch Day-1 demo target"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sample_target"]

[tool.pytest.ini_options]
testpaths = ["tests"]
