[project]
name = "clamp-bug"
version = "0.1.0"
description = "Eval target: buggy clamp() lower bound"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clamp_bug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
