[project]
name = "even-bug"
version = "0.1.0"
description = "Eval target: buggy is_even()"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["even_bug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
