[project]
name = "percent-bug"
version = "0.1.0"
description = "Eval target: buggy percentage()"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["percent_bug"]

[tool.pytest.ini_options]
testpaths = ["tests"]
